Usamos o react-hook-form para validar o formulário de contato. Configuramos o formulário para exibir uma borda vermelha e o placeholder em vermelho caso haja erro nos campos ao clicar no botão 'Enviar Mensagem', para isso também precisei passar no css global uma classe para o placeholder para que sua cor seja em vermelho caso haja erro.

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ html {
   @apply placeholder-tertiary;
 }
 
+.placeholder-crimson-red::placeholder {
+  color: #DC2626; /* Escolha a cor de vermelho que deseja */
+}
+
 .flip-card {
   perspective: 1000px;
 }
